--- a/index.html
+++ b/index.html
@@ -12,64 +12,72 @@
 
     <header>
         <div>
-            registration form
+            ITI PHP
         </div>
     </header>
-    <div>
+    <main id="registrationForm">
         <div>
-            <p>form</p>
+            <p>registration form</p>
         </div>
-        <form action="main.php" method="post">
-            <div class="more">
-                <div>
-                    <label for="firstName">first name:</label>
-                    <input type="text" name="firstName" id="firstName" />
+        <div>
+            <form action="main.php" method="post">
+                <div class="more">
+                    <div>
+                        <label for="firstName">first name:</label>
+                        <input type="text" name="firstName" id="firstName" />
+                    </div>
+                    <div>
+                        <label for="lastName">last name:</label>
+                        <input type="text" name="lastName" id="lastName" />
+                    </div>
                 </div>
-                <div>
-                    <label for="lastName">last name:</label>
-                    <input type="text" name="lastName" id="lastName" />
+                <div class="more">
+                    <div>
+                        <label for="userName">username:</label>
+                        <input type="text" name="userName" id="userName">
+                    </div>
+                    <div>
+                        <label for="password">password:</label>
+                        <input type="password" name="password" id="password">
+                    </div>
                 </div>
-            </div>
-            <div>
-                <label for="Adress">Address:</label>
-                <textarea name="Address" id="Address" cols="30" rows="3"></textarea>
-            </div>
-            <div>
-                <label for="country">country:</label>
-                <select name="country" id="country">
-                    <option value="Egypt">Egypt</option>
-                    <option value="USA">USA</option>
-                    <option value="UK">UK</option>
-                    <option value="France">France</option>
-                    <option value="Germany">Germany</option>
+                <div class="more">
+                    <div>
+                        <label for="phone">phone</label>
+                        <input type="text" name="phone" id="phone">
+                    </div>
+                    <div>
+                        <label for="Adress">Address:</label>
+                        <textarea name="Address" id="Address" rows="2"></textarea>
+                    </div>
+                </div>
+                <div class="more">
+                    <div>
+                        <label for="country">country:</label>
+                        <select name="country" id="country">
+                            <option value="Egypt">Egypt</option>
+                            <option value="USA">USA</option>
+                            <option value="UK">UK</option>
+                            <option value="France">France</option>
+                            <option value="Germany">Germany</option>
+                        </select>
+                    </div>
+                    <div>
+                        <label for="department">department:</label>
+                        <select name="department" id="department">
+                            <option value="IT">IT</option>
+                            <option value="HR">HR</option>
+                            <option value="Sales">Sales</option>
+                            <option value="Marketing">Marketing</option>
+                            <option value="Finance">Finance</option>
+                        </select>
+                    </div>
+                </div>
 
-                </select>
-                <label for="">gender:</label>
-                <div>
-                    <input type="radio" name="gender" value="male" id="male">
-                    <label for="male">male</label>
-                </div>
-                <div>
-                    <input type="radio" name="gender" value="female" id="female">
-                    <label for="female">female</label>
-                </div>
-            </div>
-            <div class="more">
-                <div>
-                    <label for="userName">username:</label>
-                    <input type="text" name="userName" id="userName">
-                </div>
-                <div>
-                    <label for="password">password:</label>
-                    <input type="password" name="password" id="password">
-                </div>
-            </div>
-            <div class="more">
-                <div class="container-skills">
-                    <label>skills:</label>
-                    <div class="skills">
-                        <div>
-                            <span>language skils:</span>
+                <div class="more skills">
+                    <div>
+                        <span>language skils:</span>
+                        <div class="allSkills">
                             <div>
                                 <input type="checkbox" name="lang[]" value="php" id="php">
                                 <label for="php">php</label>
@@ -79,8 +87,10 @@
                                 <label for="java">java</label>
                             </div>
                         </div>
-                        <div>
-                            <span>database skils:</span>
+                    </div>
+                    <div>
+                        <span> skils:</span>
+                        <div class="allSkills">
                             <div>
                                 <input type="checkbox" name="database[]" value="mysql" id="mysql">
                                 <label for="mysql">mysql</label>
@@ -91,27 +101,48 @@
                             </div>
                         </div>
                     </div>
+                    <div>
+                        <span> framework:</span>
+                        <div class="allSkills">
+                            <div>
+                                <input type="checkbox" name="framework[]" value="laravel" id="laravel">
+                                <label for="laravel">laravel</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" name="framework[]" value="spring" id="spring">
+                                <label for="spring">spring</label>
+                            </div>
+                        </div>
+                    </div>
+                    
                 </div>
                 <div>
-                    <label for="department">department:</label>
-                    <select name="department" id="department">
-                        <option value="IT">IT</option>
-                        <option value="HR">HR</option>
-                        <option value="Sales">Sales</option>
-                        <option value="Marketing">Marketing</option>
-                        <option value="Finance">Finance</option>
-                    </select>
+                    <div>
+                        <label for="">gender:</label>
+                        <div>
+                            <input type="radio" name="gender" value="male" id="male">
+                            <label for="male">male</label>
+                        </div>
+                        <div>
+                            <input type="radio" name="gender" value="female" id="female">
+                            <label for="female">female</label>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div>
-                <span>code:</span> <span class="code">123456</span>
-                <label for="code">Enter the code:</label>
-                <input type="text" name="code" id="code">
-            </div>
+                <div class="more">
+                    <div>
+                        <span>code:</span> <span class="code">123456</span>
+                    </div>
+                    <div>
+                        <label for="code">Enter the code:</label>
+                        <input type="text" name="code" id="code">
+                    </div>
+                </div>
 
-            <input type="submit">
-        </form>
-    </div>
+                <input type="submit">
+            </form>
+        </div>
+    </main>
 </body>
 
 <script src="main.js"></script>
