--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>ITI-PHP</title>
     <link rel="stylesheet" href="style.css">
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script> -->
-
 <body>
-
     <header>
         <div>
             ITI PHP
@@ -20,7 +18,7 @@
             <p>registration form</p>
         </div>
         <div>
-            <form action="main.php" method="post">
+            <form action="register.php" method="post">
                 <div class="more">
                     <div>
                         <label for="userName">username:</label>
@@ -129,7 +127,7 @@
                 </div>
                 <div>
                     <input type="reset">
-                    <input type="submit" value="Register">
+                    <input type="submit" onclick="login()" value="Register">
                 </div>
             </form>
         </div>
