delete and update info users

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                     <div>
                         <label for="country">country:</label>
                         <select name="country" id="country">
+                            <option value="Egypt">Egypt</option>
+                            <option value="US">US</option>
+
                         </select>
                     </div>
                     <div>
@@ -80,11 +83,11 @@
                         <span>language skils:</span>
                         <div class="allSkills">
                             <div>
-                                <input type="checkbox" name="lang[]" value="php" id="php">
+                                <input type="checkbox" name="skillLang[]" value="php" id="php">
                                 <label for="php">php</label>
                             </div>
                             <div>
-                                <input type="checkbox" name="lang[]" value="java" id="java">
+                                <input type="checkbox" name="skillLang[]" value="java" id="java">
                                 <label for="java">java</label>
                             </div>
                         </div>
@@ -93,11 +96,11 @@
                         <span> database:</span>
                         <div class="allSkills">
                             <div>
-                                <input type="checkbox" name="database[]" value="mysql" id="mysql">
+                                <input type="checkbox" name="skillDatabase[]" value="mysql" id="mysql">
                                 <label for="mysql">mysql</label>
                             </div>
                             <div>
-                                <input type="checkbox" name="database[]" value="oracle" id="oracle">
+                                <input type="checkbox" name="skillDatabase[]" value="oracle" id="oracle">
                                 <label for="oracle">oracle</label>
                             </div>
                         </div>
@@ -106,11 +109,11 @@
                         <span> framework:</span>
                         <div class="allSkills">
                             <div>
-                                <input type="checkbox" name="framework[]" value="laravel" id="laravel">
+                                <input type="checkbox" name="skillFramework[]" value="laravel" id="laravel">
                                 <label for="laravel">laravel</label>
                             </div>
                             <div>
-                                <input type="checkbox" name="framework[]" value="spring" id="spring">
+                                <input type="checkbox" name="skillFramework[]" value="spring" id="spring">
                                 <label for="spring">spring</label>
                             </div>
                         </div>
