edit style and database

--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
         @require_once('header.php');
     ?>
     <main id="loginForm">
-        <div>
+        <div class="title">
             <p>login form</p>
         </div>
         <div>
