--- a/register.html
+++ b/register.html
@@ -13,7 +13,7 @@
         @require_once('header.php');
     ?>
     <main id="registrationForm">
-        <div>
+        <div class="title">
             <p>registration form</p>
         </div>
         <div>
@@ -86,45 +86,54 @@
                         <textarea name="Address" id="Address" rows="2"></textarea>
                     </div>
                 </div>
-                <div class="more skills">
-                    <div>
-                        <span>language skils:</span>
-                        <div class="allSkills">
+                <div>
+                    <div class="multi">
+                        <div>
+                            <span>skills</span>
+                        </div>
+                        <div>
                             <div>
-                                <input type="checkbox" name="skillLang[]" value="php" id="php">
-                                <label for="php">php</label>
+                                <span>language skils:</span>
+                                <div class="allmulti">
+                                    <div>
+                                        <input type="checkbox" name="skillLang[]" value="php" id="php">
+                                        <label for="php">php</label>
+                                    </div>
+                                    <div>
+                                        <input type="checkbox" name="skillLang[]" value="java" id="java">
+                                        <label for="java">java</label>
+                                    </div>
+                                </div>
                             </div>
                             <div>
-                                <input type="checkbox" name="skillLang[]" value="java" id="java">
-                                <label for="java">java</label>
+                                <span> database</span>
+                                <div class="allmulti">
+                                    <div>
+                                        <input type="checkbox" name="skillDatabase[]" value="mysql" id="mysql">
+                                        <label for="mysql">mysql</label>
+                                    </div>
+                                    <div>
+                                        <input type="checkbox" name="skillDatabase[]" value="oracle" id="oracle">
+                                        <label for="oracle">oracle</label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div>
+                                <span> framework:</span>
+                                <div class="allmulti">
+                                    <div>
+                                        <input type="checkbox" name="skillFramework[]" value="laravel" id="laravel">
+                                        <label for="laravel">laravel</label>
+                                    </div>
+                                    <div>
+                                        <input type="checkbox" name="skillFramework[]" value="spring" id="spring">
+                                        <label for="spring">spring</label>
+                                    </div>
+
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div>
-                        <span> database:</span>
-                        <div class="allSkills">
-                            <div>
-                                <input type="checkbox" name="skillDatabase[]" value="mysql" id="mysql">
-                                <label for="mysql">mysql</label>
-                            </div>
-                            <div>
-                                <input type="checkbox" name="skillDatabase[]" value="oracle" id="oracle">
-                                <label for="oracle">oracle</label>
-                            </div>
-                        </div>
-                    </div>
-                    <div>
-                        <span> framework:</span>
-                        <div class="allSkills">
-                            <div>
-                                <input type="checkbox" name="skillFramework[]" value="laravel" id="laravel">
-                                <label for="laravel">laravel</label>
-                            </div>
-                            <div>
-                                <input type="checkbox" name="skillFramework[]" value="spring" id="spring">
-                                <label for="spring">spring</label>
-                            </div>
-                        </div>
+                        </fieldset>
                     </div>
                 </div>
                 <div class="more">
